e2e/testdata/gatekeeper/constraint-crd.yaml
# Pulled from API server running gatekeeper
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: k8sallowedrepos.constraints.gatekeeper.sh
spec:
  conversion:
    strategy: None
  group: constraints.gatekeeper.sh
  names:
    kind: K8sAllowedRepos
    listKind: K8sAllowedReposList
    plural: k8sallowedrepos
    singular: k8sallowedrepos
  scope: Cluster
  versions:
  - name: v1beta1
    served: true
    storage: true
    additionalPrinterColumns:
    - jsonPath: .metadata.creationTimestamp
      description: |-
        CreationTimestamp is a timestamp representing the server time when this object was created. It is not guaranteed to be set in happens-before order across separate operations. Clients may not set this value. It is represented in RFC3339 form and is in UTC.

        Populated by the system. Read-only. Null for lists. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#metadata
      name: Age
      type: date
    schema:
      openAPIV3Schema:
        type: object
        properties:
          spec:
            type: object
            properties:
              enforcementAction:
                type: string
              match:
                type: object
                properties:
                  kinds:
                    items:
                      type: object
                      properties:
                        apiGroups:
                          type: array
                          items:
                            type: string
                        kinds:
                          type: array
                          items:
                            type: string
                    type: array
                  labelSelector:
                    type: object
                    properties:
                      matchExpressions:
                        items:
                          type: object
                          properties:
                            key:
                              type: string
                            operator:
                              enum:
                              - In
                              - NotIn
                              - Exists
                              - DoesNotExist
                              type: string
                            values:
                              items:
                                type: string
                              type: array
                        type: array
                  namespaceSelector:
                    type: object
                    properties:
                      matchExpressions:
                        type: array
                        items:
                          type: object
                          properties:
                            key:
                              type: string
                            operator:
                              enum:
                              - In
                              - NotIn
                              - Exists
                              - DoesNotExist
                              type: string
                            values:
                              items:
                                type: string
                              type: array
                  namespaces:
                    items:
                      type: string
                    type: array
              parameters:
                type: object
                properties:
                  repos:
                    items:
                      type: string
                    type: array
  - name: v1alpha1
    served: true
    storage: false
    additionalPrinterColumns:
    - jsonPath: .metadata.creationTimestamp
      description: |-
        CreationTimestamp is a timestamp representing the server time when this object was created. It is not guaranteed to be set in happens-before order across separate operations. Clients may not set this value. It is represented in RFC3339 form and is in UTC.

        Populated by the system. Read-only. Null for lists. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#metadata
      name: Age
      type: date
    schema:
      openAPIV3Schema:
        type: object
        properties:
          spec:
            type: object
            properties:
              enforcementAction:
                type: string
              match:
                type: object
                properties:
                  kinds:
                    items:
                      type: object
                      properties:
                        apiGroups:
                          type: array
                          items:
                            type: string
                        kinds:
                          type: array
                          items:
                            type: string
                    type: array
                  labelSelector:
                    type: object
                    properties:
                      matchExpressions:
                        items:
                          type: object
                          properties:
                            key:
                              type: string
                            operator:
                              enum:
                              - In
                              - NotIn
                              - Exists
                              - DoesNotExist
                              type: string
                            values:
                              items:
                                type: string
                              type: array
                        type: array
                  namespaceSelector:
                    type: object
                    properties:
                      matchExpressions:
                        type: array
                        items:
                          type: object
                          properties:
                            key:
                              type: string
                            operator:
                              enum:
                              - In
                              - NotIn
                              - Exists
                              - DoesNotExist
                              type: string
                            values:
                              items:
                                type: string
                              type: array
                  namespaces:
                    items:
                      type: string
                    type: array
              parameters:
                type: object
                properties:
                  repos:
                    items:
                      type: string
                    type: array
